--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfileParameters.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIProfileParameters.Edit.cshtml
@@ -8,9 +8,9 @@
 @inject IOptions<DefaultAIOptions> DefaultAIOptions
 
 <div class="@Orchard.GetWrapperClasses()">
-    <label asp-for="SystemMessage" class="@Orchard.GetLabelClasses()">@T["System description"]</label>
+    <label asp-for="SystemMessage" class="@Orchard.GetLabelClasses()">@T["System instructions"]</label>
     <div class="@Orchard.GetEndClasses()">
-        <div class="hint mb-1">@T["The system message sets the AI's behavior and response style, guiding how it interacts in a conversation."]</div>
+        <div class="hint mb-1">@T["The system instruction sets the AI's behavior and response style, guiding how it interacts in a conversation."]</div>
         <textarea asp-for="SystemMessage" class="form-control content-preview-text" rows="5" disabled="@Model.IsSystemMessageLocked"></textarea>
     </div>
 </div>
@@ -19,7 +19,7 @@
     <label asp-for="MaxTokens" class="@Orchard.GetLabelClasses()">@T["Max response"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="MaxTokens" step="4" min="4">
-        <span class="hint">@T["Set a limit on the number of tokens per model response. The supported number of tokens are shared between the prompt (including system message, examples, message history, and user query) and the model's response. One token is roughly 4 characters for typical English text. Leave it blank to use the app default of {0}.", DefaultAIOptions.Value.MaxOutputTokens]</span>
+        <span class="hint">@T["Set a limit on the number of tokens per model response. The supported number of tokens are shared between the prompt (including system message, examples, message history, and user query) and the model's response. One token is roughly 4 characters for typical English text."]</span>
     </div>
 </div>
 
@@ -27,7 +27,7 @@
     <label asp-for="Temperature" class="@Orchard.GetLabelClasses()">@T["Temperature"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="Temperature" step="0.01" min="0" max="1">
-        <span class="hint">@T["Controls randomness. Lowering the temperature means that the model will produce more repetitive and deterministic responses. Increasing the temperature will result in more unexpected or creative responses. Try adjusting temperature or Top P but not both. Leave it blank to use the app default of {0}.", DefaultAIOptions.Value.Temperature]</span>
+        <span class="hint">@T["Controls randomness. Lowering the temperature means that the model will produce more repetitive and deterministic responses. Increasing the temperature will result in more unexpected or creative responses. Try adjusting temperature or Top P but not both."]</span>
     </div>
 </div>
 
@@ -35,15 +35,15 @@
     <label asp-for="TopP" class="@Orchard.GetLabelClasses()">@T["Top P"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="TopP" step="0.01" min="0" max="1">
-        <span class="hint">@T["Similar to temperature, this controls randomness but uses a different method. Lowering Top P will narrow the model's token selection to likelier tokens. Increasing Top P will let the model choose from tokens with both high and low likelihood. Try adjusting temperature or Top P but not both. Leave it blank to use the app default of {0}.", DefaultAIOptions.Value.TopP]</span>
+        <span class="hint">@T["Similar to temperature, this controls randomness but uses a different method. Lowering Top P will narrow the model's token selection to likelier tokens. Increasing Top P will let the model choose from tokens with both high and low likelihood. Try adjusting temperature or Top P but not both."]</span>
     </div>
 </div>
 
 <div class="@Orchard.GetWrapperClasses()">
     <label asp-for="FrequencyPenalty" class="@Orchard.GetLabelClasses()">@T["Frequency penalty"]</label>
     <div class="@Orchard.GetEndClasses()">
-        <input type="number" class="form-control" asp-for="FrequencyPenalty " step="0.01" min="0" max="1">
-        <span class="hint">@T["Reduce the chance of repeating a token proportionally based on how often it has appeared in the text so far. This decreases the likelihood of repeating the exact same text in a response. Leave it blank to use the app default of {0}.", DefaultAIOptions.Value.FrequencyPenalty]</span>
+        <input type="number" class="form-control" asp-for="FrequencyPenalty" step="0.01" min="0" max="1">
+        <span class="hint">@T["Reduce the chance of repeating a token proportionally based on how often it has appeared in the text so far. This decreases the likelihood of repeating the exact same text in a response."]</span>
     </div>
 </div>
 
@@ -51,7 +51,7 @@
     <label asp-for="PresencePenalty" class="@Orchard.GetLabelClasses()">@T["Presence penalty"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="PresencePenalty" step="0.01" min="0" max="1">
-        <span class="hint">@T["Reduce the chance of repeating any token that has appeared in the text at all so far. This increases the likelihood of introducing new topics in a response. Leave it blank to use the app default of {0}.", DefaultAIOptions.Value.PresencePenalty]</span>
+        <span class="hint">@T["Reduce the chance of repeating any token that has appeared in the text at all so far. This increases the likelihood of introducing new topics in a response."]</span>
     </div>
 </div>
 
@@ -59,7 +59,7 @@
     <label asp-for="PastMessagesCount" class="@Orchard.GetLabelClasses()">@T["Past messages included"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="PastMessagesCount" step="1" min="2" max="20">
-        <span class="hint">@T["Select the number of past messages to include in each new API request. This helps give the model context for new user queries. Setting this number to 10 will include 5 user queries and 5 system responses. Leave it blank to use the app default of {0}.", DefaultAIOptions.Value.PastMessagesCount]</span>
+        <span class="hint">@T["Select the number of past messages to include in each new API request. This helps give the model context for new user queries. Setting this number to 10 will include 5 user queries and 5 system responses."]</span>
     </div>
 </div>
 
